--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moving Gradient Profile Card</title>
+    <title> Profile Card</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -26,10 +26,12 @@
 </head>
 
 <body class="bg-slate-800 bg-gradient-animated text-black grid place-content-center h-screen">
+    <div>
     <audio id="backgroundMusic" autoplay loop>
-        <source src="BTS  Life Goes On  INSTRUMENTAL.mp3" type="audio/mpeg">
+        <source src="BTS.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
+    </div>    
     <!-- Profile Card with Moving Gradient Background -->
     <div class="rounded-3xl bg-white dark:bg-black m-12 p-16 shadow-lg ">
         <!-- Profile Image with Dotted Border -->
