--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 </head>
 
 <body class="bg-slate-800 bg-gradient-animated text-black grid place-content-center h-screen">
-    <div>
+    
     <audio id="backgroundMusic" autoplay loop>
-        <source src="bts_.mp3" type="audio/mpeg">
+        <source src="bts_.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
-    </div>    
+       
     <!-- Profile Card with Moving Gradient Background -->
     <div class="rounded-3xl bg-white dark:bg-black m-12 p-16 shadow-lg ">
         <!-- Profile Image with Dotted Border -->
