--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title> Profile Card</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
-      <script>
+<!--       <script>
     tailwind.config = {
       theme: {
         extend: {
@@ -21,7 +21,7 @@
         }
       }
     }
-  </script>
+  </script> -->
     <style>
         @keyframes gradient-x {
             0%, 100% {
