--- a/index.html
+++ b/index.html
@@ -4,24 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Profile Card</title>
+    <title>Moving Gradient Profile Card</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
-<!--       <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          screens: {
-            'sm': '640px',
-            'md': '768px',
-            'lg': '1024px',
-            'xl': '1280px',
-            '2xl': '1536px',
-          },
-        }
-      }
-    }
-  </script> -->
     <style>
         @keyframes gradient-x {
             0%, 100% {
@@ -33,7 +18,7 @@
         }
 
         .bg-gradient-animated {
-            background: linear-gradient(270deg,#FEAC5E, #C779D0,#4bc0c8);
+            background: linear-gradient(270deg, #FEAC5E, #C779D0, #4bc0c8);
             background-size: 400% 400%;
             animation: gradient-x 8s ease infinite;
         }
@@ -41,63 +26,61 @@
 </head>
 
 <body class="bg-slate-800 bg-gradient-animated text-black grid place-content-center h-screen">
-    
     <audio id="backgroundMusic" autoplay loop>
-        <source src="bts_.mp3" type="audio/mp3">
+        <source src="BTS Life Goes On INSTRUMENTAL.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
-       
     <!-- Profile Card with Moving Gradient Background -->
-    <div class="rounded-3xl bg-white dark:bg-black m-12 p-16 shadow-lg ">
+    <div class="rounded-3xl bg-white dark:bg-black m-4 sm:m-8 lg:m-12 p-4 sm:p-8 lg:p-16 shadow-lg">
         <!-- Profile Image with Dotted Border -->
         <div class="flex justify-center relative">
             <div class="rounded-full p-2 border-4 border-dotted border-orange-400">
-                <img class="rounded-full w-40 h-40 object-cover" src="me.jpg" alt="Profile Image">
+                <img class="rounded-full w-32 h-32 sm:w-40 sm:h-40 object-cover" src="me.jpg" alt="Profile Image">
             </div>
         </div>
 
         <!-- Name and Title -->
-        <div class="text-2xl text-center mt-6 font-mono font-bold text-black dark:text-white">
+        <div class="text-xl sm:text-2xl text-center mt-4 sm:mt-6 font-mono font-bold text-black dark:text-white">
             <p>Sanjana Sajan Gharat</p>
         </div>
-        <p class="uppercase text-center text-sm mt-2 text-black dark:text-white">
+        <p class="uppercase text-sm sm:text-base text-center mt-2 text-black dark:text-white">
             Student &nbsp | &nbsp VIT BHOPAL University
         </p>
 
         <!-- Divider -->
-        <div class="bg-orange-400 h-2 w-40 mt-4 mx-auto"></div>
+        <div class="bg-orange-400 h-1 sm:h-2 w-24 sm:w-40 mt-4 mx-auto"></div>
 
         <!-- Contact Information -->
-        <div class="flex flex-col items-start mt-8 space-y-4 text-black dark:text-white">
+        <div class="flex flex-col items-start mt-6 sm:mt-8 space-y-4 text-black dark:text-white">
             <!-- Location -->
             <a href="https://www.google.com/maps/place/Your+Location" class="hover:text-blue-600 flex items-center">
-                <i class="fas fa-map-marker-alt text-3xl"></i>
-                <p class="ml-3 text-xl">Navi-Mumbai, Maharashtra</p>
+                <i class="fas fa-map-marker-alt text-2xl sm:text-3xl"></i>
+                <p class="ml-2 sm:ml-3 text-lg sm:text-xl">Navi-Mumbai, Maharashtra</p>
             </a>
             <!-- Phone -->
             <a href="tel:+1234567890" class="hover:text-green-600 flex items-center">
-                <i class="fas fa-phone-alt text-3xl"></i>
-                <p class="ml-3 text-xl">9619750636</p>
+                <i class="fas fa-phone-alt text-2xl sm:text-3xl"></i>
+                <p class="ml-2 sm:ml-3 text-lg sm:text-xl">9619750636</p>
             </a>
             <!-- Email -->
             <a href="mailto:sanjanagharat16@gmail.com" class="hover:text-red-600 flex items-center">
-                <i class="fas fa-envelope text-3xl"></i>
-                <p class="ml-3 text-xl">sanjanagharat16@gmail.com</p>
+                <i class="fas fa-envelope text-2xl sm:text-3xl"></i>
+                <p class="ml-2 sm:ml-3 text-lg sm:text-xl">sanjanagharat16@gmail.com</p>
             </a>
             <!-- LinkedIn -->
             <a href="https://www.linkedin.com/in/sanjana-gharat-b62752250/" class="hover:text-blue-600 flex items-center">
-                <i class="fab fa-linkedin text-3xl"></i>
-                <p class="ml-3 text-xl">Sanjana Gharat</p>
+                <i class="fab fa-linkedin text-2xl sm:text-3xl"></i>
+                <p class="ml-2 sm:ml-3 text-lg sm:text-xl">Sanjana Gharat</p>
             </a>
             <!-- GitHub -->
             <a href="https://github.com/SanjanaGharat" class="hover:text-lime-400 flex items-center">
-                <i class="fab fa-github text-3xl"></i>
-                <p class="ml-3 text-xl">SanjanaGharat</p>
+                <i class="fab fa-github text-2xl sm:text-3xl"></i>
+                <p class="ml-2 sm:ml-3 text-lg sm:text-xl">SanjanaGharat</p>
             </a>
             <!-- Website -->
             <a href="https://sanjanagharat.github.io/Myportfolio/" class="hover:text-blue-600 flex items-center">
-                <i class="fas fa-globe text-3xl"></i>
-                <p class="ml-3 text-xl">Myportfolio</p>
+                <i class="fas fa-globe text-2xl sm:text-3xl"></i>
+                <p class="ml-2 sm:ml-3 text-lg sm:text-xl">Myportfolio</p>
             </a>
         </div>
     </div>
