--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </head>
 
 <body class="bg-slate-800 bg-gradient-animated text-black grid place-content-center h-screen">
-    <audio id="backgroundMusic" autoplay loop>
-        <source src="BTS Life Goes On INSTRUMENTAL.mp3" type="audio/mpeg">
+    <audio autoplay loop>
+        <source src="bts_.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     <!-- Profile Card with Moving Gradient Background -->
