--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body class="bg-slate-800 bg-gradient-animated text-black grid place-content-center h-screen">
     <audio autoplay loop>
-        <source src="bts_.mp3" type="audio/mpeg">
+        <source src="B-card/bts_.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     <!-- Profile Card with Moving Gradient Background -->
