--- a/index.html
+++ b/index.html
@@ -26,10 +26,20 @@
 </head>
 
 <body class="bg-slate-800 bg-gradient-animated text-black grid place-content-center h-screen">
-    <audio autoplay loop>
+<!--     <audio autoplay loop>
         <source src="B-card/bts_.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
+    </audio> -->
+    <audio loop>
+        <source src="bts_.mp3" type="audio/mpeg">
+        Your browser does not support the audio tag.
     </audio>
+    
+    <script>
+        const audio = document.querySelector('audio');
+        audio.volume = 0.5; // Set volume (0.0 to 1.0)
+        audio.play();
+    </script>
     <!-- Profile Card with Moving Gradient Background -->
     <div class="rounded-3xl bg-white dark:bg-black m-4 sm:m-8 lg:m-12 p-4 sm:p-8 lg:p-16 shadow-lg">
         <!-- Profile Image with Dotted Border -->
