--- a/index.html
+++ b/index.html
@@ -2,12 +2,6 @@
 <html lang="en">
 
 <head>
-    <!-- Front matter required by Jekyll -->
-    ---
-    layout: default
-    title: Profile Card
-    ---
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Card</title>
@@ -15,11 +9,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @keyframes gradient-x {
-            0%,
-            100% {
+            0%, 100% {
                 background-position: 0% 50%;
             }
-
             50% {
                 background-position: 100% 50%;
             }
@@ -34,23 +26,26 @@
 </head>
 
 <body class="bg-slate-800 bg-gradient-animated text-black grid place-content-center h-screen">
-    <!-- Audio section with Jekyll path -->
-    <audio autoplay loop>
-        <source src="{{ '/assets/audio/bts_.mp3' | relative_url }}" type="audio/mpeg">
+<!--     <audio autoplay loop>
+        <source src="B-card/bts_.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
+    </audio> -->
+    <audio loop>
+        <source src="bts_.mp3" type="audio/mpeg">
+        Your browser does not support the audio tag.
     </audio>
-
+    
     <script>
         const audio = document.querySelector('audio');
         audio.volume = 0.5; // Set volume (0.0 to 1.0)
+        audio.play();
     </script>
-
     <!-- Profile Card with Moving Gradient Background -->
     <div class="rounded-3xl bg-white dark:bg-black m-4 sm:m-8 lg:m-12 p-4 sm:p-8 lg:p-16 shadow-lg">
         <!-- Profile Image with Dotted Border -->
         <div class="flex justify-center relative">
             <div class="rounded-full p-2 border-4 border-dotted border-orange-400">
-                <img class="rounded-full w-32 h-32 sm:w-40 sm:h-40 object-cover" src="{{ '/assets/images/me.jpg' | relative_url }}" alt="Profile Image">
+                <img class="rounded-full w-32 h-32 sm:w-40 sm:h-40 object-cover" src="me.jpg" alt="Profile Image">
             </div>
         </div>
 
