--- a/index.html
+++ b/index.html
@@ -23,21 +23,63 @@
             background-size: 400% 400%;
             animation: gradient-x 8s ease infinite;
         }
+
+        .flip-card {
+            position: relative;
+            width: 450px;
+            height: 800px;
+            perspective: 1000px;
+            cursor: pointer;
+        }
+
+        .flip-card-inner {
+            transition: transform 0.6s;
+            transform-style: preserve-3d;
+            width: 100%;
+            height: 100%;
+        }
+
+        .flip-card.flipped .flip-card-inner {
+            transform: rotateY(180deg);
+        }
+
+        .flip-card-front,
+        .flip-card-back {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            border-radius: 1rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .flip-card-back {
+            transform: rotateY(180deg);
+            background-color: black;
+            color: white;
+        }
+
+        .skills {
+            margin-top: 20px;
+        }
     </style>
 </head>
 
 <body class="bg-slate-800 bg-gradient-animated text-black grid place-content-center h-screen">
-    <!-- Audio Section -->
-    <audio id="background-audio"  autoplay loop>
+    <audio id="background-audio" autoplay loop>
         <source src="bts_.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
     <script>
         const audio = document.querySelector('#background-audio');
-        audio.volume = 0.5; // Set volume (0.0 to 1.0)
+        audio.volume = 0.1;
 
-        // Try to autoplay the audio after user interaction
         document.addEventListener('click', () => {
             if (audio.paused) {
                 audio.play().catch(error => {
@@ -47,60 +89,88 @@
         });
     </script>
 
-    <!-- Profile Card with Moving Gradient Background -->
-    <div class="rounded-3xl bg-white dark:bg-black m-4 sm:m-8 lg:m-12 p-4 sm:p-8 lg:p-16 shadow-lg">
-        <!-- Profile Image with Dotted Border -->
-        <div class="flex justify-center relative">
-            <div class="rounded-full p-2 border-4 border-dotted border-orange-400">
-                <img class="rounded-full w-32 h-32 sm:w-40 sm:h-40 object-cover" src="me.jpg" alt="Profile Image">
+    <div class="flex justify-center items-center h-full">
+        <div class="flip-card" id="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front bg-white dark:bg-black">
+                    <div class="flex justify-center relative">
+                        <div class="rounded-full p-2 border-4 border-dotted border-orange-400">
+                            <img class="rounded-full w-32 h-32 sm:w-40 sm:h-40 object-cover" src="me.jpg" alt="Profile Image" id="front-image">
+                        </div>
+                    </div>
+
+                    <div class="text-xl sm:text-2xl text-center mt-4 sm:mt-6 font-mono font-bold text-black dark:text-white">
+                        <p>Sanjana Sajan Gharat</p>
+                    </div>
+                    <p class="uppercase text-sm sm:text-base text-center mt-2 text-black dark:text-white">
+                        Student &nbsp | &nbsp VIT BHOPAL University
+                    </p>
+                    <div class="bg-orange-400 h-1 sm:h-2 w-24 sm:w-40 mt-4 mx-auto"></div>
+                    <div class="flex flex-col items-start mt-6 sm:mt-8 space-y-4 text-black dark:text-white">
+                        <a href="https://www.google.com/maps/place/Your+Location" class="hover:text-blue-600 flex items-center">
+                            <i class="fas fa-map-marker-alt text-2xl sm:text-3xl"></i>
+                            <p class="ml-2 sm:ml-3 text-lg sm:text-xl">Navi-Mumbai, Maharashtra</p>
+                        </a>
+                        <a href="tel:+1234567890" class="hover:text-green-600 flex items-center">
+                            <i class="fas fa-phone-alt text-2xl sm:text-3xl"></i>
+                            <p class="ml-2 sm:ml-3 text-lg sm:text-xl">9619750636</p>
+                        </a>
+                        <a href="mailto:sanjanagharat16@gmail.com" class="hover:text-red-600 flex items-center">
+                            <i class="fas fa-envelope text-2xl sm:text-3xl"></i>
+                            <p class="ml-2 sm:ml-3 text-lg sm:text-xl">sanjanagharat16@gmail.com</p>
+                        </a>
+                        <a href="https://www.linkedin.com/in/sanjana-gharat-b62752250/" class="hover:text-blue-600 flex items-center">
+                            <i class="fab fa-linkedin text-2xl sm:text-3xl"></i>
+                            <p class="ml-2 sm:ml-3 text-lg sm:text-xl">Sanjana Gharat</p>
+                        </a>
+                        <a href="https://github.com/SanjanaGharat" class="hover:text-lime-400 flex items-center">
+                            <i class="fab fa-github text-2xl sm:text-3xl"></i>
+                            <p class="ml-2 sm:ml-3 text-lg sm:text-xl">SanjanaGharat</p>
+                        </a>
+                        <a href="https://sanjanagharat.github.io/Myportfolio/" class="hover:text-blue-600 flex items-center">
+                            <i class="fas fa-globe text-2xl sm:text-3xl"></i>
+                            <p class="ml-2 sm:ml-3 text-lg sm:text-xl">Myportfolio</p>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="flip-card-back bg-black shadow-lg">
+                    <div class="grid place-items-start">
+                        <div class="rounded-full p-2 border-4 border-dotted border-orange-400">
+                            <img class="rounded-full w-32 h-32 sm:w-40 sm:h-40 object-cover" src="me.jpg" alt="Profile Image" id="back-image">
+                        </div>
+                    </div>
+
+                    <div class="skills text-center mt-8">
+                        <h2 class="text-xl font-bold text-white">Skills</h2>
+                        <div class="flex flex-col items-center mt-4 space-y-2">
+                            <span class="text-gray-300">JavaScript</span>
+                            <span class="text-gray-300">HTML & CSS</span>
+                            <span class="text-gray-300">React</span>
+                            <span class="text-gray-300">Node.js</span>
+                        </div>
+                        <button class="bg-yellow-500 mt-20 p-6 rounded-2xl">Buy me a coffee</button>
+                    </div>
+                </div>
             </div>
         </div>
-
-        <!-- Name and Title -->
-        <div class="text-xl sm:text-2xl text-center mt-4 sm:mt-6 font-mono font-bold text-black dark:text-white">
-            <p>Sanjana Sajan Gharat</p>
-        </div>
-        <p class="uppercase text-sm sm:text-base text-center mt-2 text-black dark:text-white">
-            Student &nbsp | &nbsp VIT BHOPAL University
-        </p>
-
-        <!-- Divider -->
-        <div class="bg-orange-400 h-1 sm:h-2 w-24 sm:w-40 mt-4 mx-auto"></div>
-
-        <!-- Contact Information -->
-        <div class="flex flex-col items-start mt-6 sm:mt-8 space-y-4 text-black dark:text-white">
-            <!-- Location -->
-            <a href="https://www.google.com/maps/place/Your+Location" class="hover:text-blue-600 flex items-center">
-                <i class="fas fa-map-marker-alt text-2xl sm:text-3xl"></i>
-                <p class="ml-2 sm:ml-3 text-lg sm:text-xl">Navi-Mumbai, Maharashtra</p>
-            </a>
-            <!-- Phone -->
-            <a href="tel:+1234567890" class="hover:text-green-600 flex items-center">
-                <i class="fas fa-phone-alt text-2xl sm:text-3xl"></i>
-                <p class="ml-2 sm:ml-3 text-lg sm:text-xl">9619750636</p>
-            </a>
-            <!-- Email -->
-            <a href="mailto:sanjanagharat16@gmail.com" class="hover:text-red-600 flex items-center">
-                <i class="fas fa-envelope text-2xl sm:text-3xl"></i>
-                <p class="ml-2 sm:ml-3 text-lg sm:text-xl">sanjanagharat16@gmail.com</p>
-            </a>
-            <!-- LinkedIn -->
-            <a href="https://www.linkedin.com/in/sanjana-gharat-b62752250/" class="hover:text-blue-600 flex items-center">
-                <i class="fab fa-linkedin text-2xl sm:text-3xl"></i>
-                <p class="ml-2 sm:ml-3 text-lg sm:text-xl">Sanjana Gharat</p>
-            </a>
-            <!-- GitHub -->
-            <a href="https://github.com/SanjanaGharat" class="hover:text-lime-400 flex items-center">
-                <i class="fab fa-github text-2xl sm:text-3xl"></i>
-                <p class="ml-2 sm:ml-3 text-lg sm:text-xl">SanjanaGharat</p>
-            </a>
-            <!-- Website -->
-            <a href="https://sanjanagharat.github.io/Myportfolio/" class="hover:text-blue-600 flex items-center">
-                <i class="fas fa-globe text-2xl sm:text-3xl"></i>
-                <p class="ml-2 sm:ml-3 text-lg sm:text-xl">Myportfolio</p>
-            </a>
-        </div>
     </div>
+
+    <script>
+        const flipCard = document.getElementById('flip-card');
+        const frontImage = document.getElementById('front-image');
+        const backImage = document.getElementById('back-image');
+
+        frontImage.addEventListener('click', (event) => {
+            event.stopPropagation();
+            flipCard.classList.toggle('flipped');
+        });
+
+        backImage.addEventListener('click', (event) => {
+            event.stopPropagation();
+            flipCard.classList.toggle('flipped');
+        });
+    </script>
 </body>
 
 </html>
